tests/snapshots/keys__keys_ctrl_w@002.snap
---
source: tests/keys.rs
description: "input: items [\"\"]\noptions: -q foo bar foo-bar\nafter:\n  @ctrl 'w'\n  @char '|'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> foo bar |                                                                     "
cursor: (24, 12)
